fixed overflow.

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -160,6 +160,7 @@ body {
     background: #fff;
     width: 100vw;
     max-width: 100vw;
+    overflow-x: hidden;
     padding: 8px 32px;
     min-height: 300px;
     & > div:not(.division) {
@@ -252,6 +253,7 @@ body {
     background: #222;
     width: 100vw;
     max-width: 100vw;
+    overflow-x: hidden;
     min-height: 300px;
     padding: 8px 32px 32px 8px;
     color: #fff;
@@ -332,6 +334,7 @@ body {
     padding-bottom: 64px;
     width: 100vw;
     max-width: 100vw;
+    overflow-x: hidden;
     .grid {
         width: 100%;
         display: grid;
@@ -388,6 +391,7 @@ body {
     padding: 8px 32px 32px 32px;
     width: 100vw;
     max-width: 100vw;
+    overflow-x: hidden;
     .badges {
         display: flex;
         justify-content: center;
@@ -435,6 +439,7 @@ body {
     padding: 24px 32px;
     width: 100vw;
     max-width: 100vw;
+    overflow-x: hidden;
     font-size: 0.85rem;
     position: relative;
     a {
